changes out photo and corrects spacing in nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,8 @@
 }
 
 .img-a {
-  height: 400px;
-  width: 300px;
+  height: 250px;
+  width: 250px;
   margin-bottom: 0px;
 }
 
